Corrected a mistake, cells are now cells and not header

--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -9,10 +9,10 @@
    </tr>
    <!-- TODO: put <tr *ngFor=""></tr> here -->
    <tr *ngFor="let floatingObj of satellites">
-       <th class="sortable">{{floatingObj.name}}</th>
-       <th class="sortable">{{floatingObj.type}}</th>
-       <th>{{floatingObj.operational}}</th>
-       <th>{{floatingObj.orbitType}}</th>
-       <th>{{floatingObj.launchDate}}</th>
+       <td>{{floatingObj.name}}</td>
+       <td>{{floatingObj.type}}</td>
+       <td>{{floatingObj.operational}}</td>
+       <td>{{floatingObj.orbitType}}</td>
+       <td>{{floatingObj.launchDate}}</td>
    </tr>
 </table>
