Completed all bonus

--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -9,7 +9,7 @@
    </tr>
    <!-- TODO: put <tr *ngFor=""></tr> here -->
    <tr *ngFor="let floatingObj of satellites">
-       <td>{{floatingObj.name}}</td>
+       <td>{{floatingObj["name"]}}</td>
        <td [class.warning]="floatingObj.shouldShowWarning()">{{floatingObj.type}}</td>
        <td>{{floatingObj.operational}}</td>
        <td>{{floatingObj.orbitType}}</td>
